@@ -1,5 +1,10 @@
 2007-04-27  Jonathan Chambers <joncham@gmail.com>
 	
+	* src/eglib-config.hw: Forgot to add for msvc build.
+	* src/vasprintf: Forgot to add for msvc build.
+
+2007-04-27  Jonathan Chambers <joncham@gmail.com>
+	
 	* src/gstr.c: Fix off by one error for NULL terminator.
 
 2007-04-27  Jonathan Chambers <joncham@gmail.com>
